调整编译策略，引用文件修改需要重新编译全部文件

--- a/src/sass/elements/button.scss
+++ b/src/sass/elements/button.scss
@@ -5,9 +5,12 @@
   white-space: nowrap;
   vertical-align: middle;
   user-select: none;
+  outline: none;
+  border: none;
+  cursor: pointer;
 
-  & .xui-primary {
+  &.xui-primary {
     color: $white;
-    background: $color-primary;
+    background-color: $color-primary;
   }
 }
